--- a/final_assignment-Copy1.ipynb
+++ b/final_assignment-Copy1.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "! curl http://6.869.csail.mit.edu/sp21/pset3_data/bill.avi > bill.avi"
+    "! curl https://6.869.csail.mit.edu/sp21/pset3_data/bill.avi > bill.avi"
    ]
   },
   {
